--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -3,14 +3,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
 /* Main */
-
-	#main {
-		opacity: 1 !important;
-		overflow-x: auto !important;
-	}
-
-		#main .item.thumb img {
-			opacity: 1 !important;
-		}
+#main {
+  opacity: 1 !important;
+  overflow-x: auto !important;
+}
+#main .item.thumb img {
+  opacity: 1 !important;
+}/*# sourceMappingURL=noscript.css.map */
